# model-cloud-burst

./: .env.example  .gitignore  02-EDA.ipynb  EDA.ipynb  README.md  app.py  data.json  flask.py  logger.py  main.py  oldFaulty-model.ipynb  predict.py  pyproject.toml  requirements.txt  templates.py
artifacts/dataset/: fetched_hardware_data.csv
hardware/: esp32_weather_station.ino  fetch_data.ipynb
logs/: metrics_20241118_054006.csv
notebooks/: 02-analytics_may_2021.ipynb  02-anomaly_detection.ipynb  02-may_2021_analysis.ipynb  03-1_var_time_series_forecasting.ipynb  03-1_var_time_series_forecasting_cloud_burst.ipynb  03-data_preprocessing.ipynb  04-time_series_forecasting_cloud_burst.ipynb  05-fetch_hardware_data.ipynb  05-handling_overfitting.ipynb  05-time_series_handling_overfitting.ipynb  06-bringing_mse_mae_down.ipynb  06-time_series_handling_overfitting.ipynb  07-eemd_application.ipynb  07-fetch_hardware_data.ipynb  08-hardware_model.ipynb  test.ipynb
reports/: 01 Synopsis Cloudburst Aug 2024.docx  03 Cloudburst Abstract September 2024.docx  04 Project Report.docx  05 Project Report Demo.docx  06 Front Final Project Report.docx  Synopsis Cloudburst Aug 2023.docx
reports/SIH, 23/: SIH presentation 01.pptx
reports/SIH, 24/: 05 SIH 2024.pptx  SIH 24, Ctrl+C_Ctrl+V.xlsx
time_series_pipeline/: stage_00_setup.py  stage_01_preprocessing.py  stage_02_signal_decomposition.py  stage_03a_imf_mode.py  stage_03b_fcr_mode.py  stage_04_postprocessing_per_channel.py  stage_05_model_forecasting.py  stage_06_ensemble_n_reconstruction.py
utils/helpers/: common.py  (+3 more)
(+23 files in other folders)
