[project]
name = "model-cloud-burst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dvc>=3.63.0",
    "emd-signal>=1.6.4",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "imblearn>=0.0",
    "ipynb-py-convert>=0.4.6",
    "joblib>=1.5.2",
    "matplotlib>=3.10.6",
    "notebook>=7.4.5",
    "pandas>=2.3.2",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "tensorflow>=2.20.0",
    "types-pyyaml>=6.0.12.20250822",
]
